<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_search_results"
    android:id="@+id/fragment_contact"
    android:background="#FFFFFF">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment_search_results">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="327dp"
            android:layout_height="43dp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/contact_email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="286dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/contact_message"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/message_input"
            android:layout_width="303dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="3"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/contact_submit_button" />


    </LinearLayout>

</FrameLayout>
